Fix: layout issues on the project detail page

--- a/components/ProjectClientView/ProjectClientView.module.css
+++ b/components/ProjectClientView/ProjectClientView.module.css
@@ -124,6 +124,19 @@
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media(max-width: 400px) {
+    .links {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
   
 .links a {
     margin: 0 0.75rem;
@@ -145,6 +158,7 @@
     line-height: 1.7;
     font-size: 1.05rem;
     color: #eaeaea;
+    margin-top: 2rem;
 }     
   
 .richText p {
